// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Mark checkGrammar 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkGrammar 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkGrammar 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkGrammar 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkHighlight 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark checkSpaces 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark className 1`] = `
<mark
  className="uu5-bricks-mark my-classname"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark content 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  12345
</mark>
`;

exports[`UU5.Bricks.Mark content 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</mark>
`;

exports[`UU5.Bricks.Mark content 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</mark>
`;

exports[`UU5.Bricks.Mark content 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  12345
</mark>
`;

exports[`UU5.Bricks.Mark controlled 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark controlled 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark controlled 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark controlled 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark default props 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark disabled 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-disabled"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</mark>
`;

exports[`UU5.Bricks.Mark disabled 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark disabled 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark disabled 4`] = `
<mark
  className="uu5-bricks-mark uu5-common-disabled"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</mark>
`;

exports[`UU5.Bricks.Mark docKit examples UU5.Bricks.Mark should render without crash 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="marked"
  />
</mark>
`;

exports[`UU5.Bricks.Mark dynamic 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark dynamic 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark dynamic 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark dynamic 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-hidden"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark hidden 4`] = `
<mark
  className="uu5-bricks-mark uu5-common-hidden"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark id 1`] = `
<mark
  className="uu5-bricks-mark"
  id="myId"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark ignoreHTML 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark mainAttrs 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark name 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex 1`] = `
<mark
  className="uu5-bricks-mark uu5-noindex"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark noIndex 4`] = `
<mark
  className="uu5-bricks-mark uu5-noindex"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected 1`] = `
<mark
  className="uu5-bricks-mark uu5-common-selected"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark selected 4`] = `
<mark
  className="uu5-bricks-mark uu5-common-selected"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark style 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector 2`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector 3`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark textCorrector 4`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Mark tooltip 1`] = `
<mark
  className="uu5-bricks-mark"
  id="uuID"
  key="mark"
  style={Object {}}
  title="My Tooltip"
/>
`;
